--- a/index.html
+++ b/index.html
@@ -15,56 +15,56 @@
       <div class="sidebar">
         <div
           style="
-            background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);
+            background: linear-gradient(229.99deg, #e33f53 -26%, #ffc12c 145%);
           "
         >
           <h1>Snow in the desert</h1>
-          <p>Love, death & robots</p>
+          <p>Raspberry and peach ice cream</p>
         </div>
         <div
           style="
-            background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
+            background: linear-gradient(215.32deg, #be77a2 -1%, #721143 124%);
           "
         >
-          <h1>Life Hutch</h1>
-          <p>Love, death & robots</p>
+          <h1>Forest Fairy Tale</h1>
+          <p>Blackberry ice cream</p>
         </div>
         <div
           style="
-            background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);
+            background: linear-gradient(221.87deg, #c67119 23%, #8ecee8 75%);
           "
         >
-          <h1>Zima Blue</h1>
-          <p>Love, death & robots</p>
+          <h1>Beach Treat</h1>
+          <p>Сreme brulee ice cream</p>
         </div>
         <div
           style="
-            background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
+            background: linear-gradient(220.16deg, #ed4721 -8%, #f8bdb4 138%);
           "
         >
-          <h1>Automated Customer Service</h1>
-          <p>Love, death & robots</p>
+          <h1>Indescribable Pleasure</h1>
+          <p>Ice cream with fresh strawberries</p>
         </div>
       </div>
       <div class="main-slide">
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');
+            background-image: url('https://images.unsplash.com/photo-1633933358116-a27b902fad35?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');
+            background-image: url('https://images.unsplash.com/photo-1570197788417-0e82375c9371?q=80&w=1416&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1488900128323-21503983a07e?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1633933037611-f26e54366832?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
         ></div>
       </div>
